fix chat-menu on mobile devices

--- a/src/project/chat/styles/chat-bar.pcss
+++ b/src/project/chat/styles/chat-bar.pcss
@@ -18,6 +18,13 @@
     height: 50px;
     vertical-align: middle;
     cursor: pointer;
+    background-image: url('../icons/chat-menu-icon.png');
+    background-size: 55px 55px;
+    background-repeat: no-repeat;
+    background-position: 20px 15px;
+    @media(--mobile) {
+      background-position: 20px 15px;
+    }
 
     @media(--mobile){
       padding: 25px 30px;
@@ -48,6 +55,7 @@
     @media(--mobile){
       margin: 16px 0;
       min-height: 58px;
+      width: 530px;
     }
 
     textarea {
@@ -83,6 +91,7 @@
     height: 50px;
     vertical-align: middle;
     cursor: pointer;
+    padding-left: 27px;
 
     @media(--mobile){
       width: 120px;
@@ -104,4 +113,7 @@
       color: $color__green;
     }
   }
+}
+.ic-menu-light:before{
+  content: '' !important;
 }
